Configuration builder 7.x-1.0-beta2, 2012-07-16
--------------------------------------------------------------------------------

- Added support for Fieldsets.
- Added example Configuration page.
- Added configurable access settings.
- Added chained tokens.
- Fixed validation of Form builder items.
- Fixed issue with single quotation marks in description fields.
- Fixed issue with pages not disabling/enabling without a manual cache clear.



Configuration builder 7.x-1.0-beta1, 2012-07-13
--------------------------------------------------------------------------------

- Initial commit.