@@ -1,3 +1,11 @@
+Configuration builder 7.x-1.x-dev, xxxx-xx-xx (development release)
+--------------------------------------------------------------------------------
+
+- Added '#tree' property for fieldsets.
+- Fixed validation errors.
+
+
+
 Configuration builder 7.x-1.0-beta2, 2012-07-16
 --------------------------------------------------------------------------------
 
